--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>home page</title>
+		<title>Home page</title>
 		<script src="me/jquery.min.js"></script>
 		<script src="me/index.js"></script>
 		<link rel="stylesheet" href="me/index.css" />
@@ -63,5 +63,5 @@
 			<pre id="style-text"></pre>
 			<pre id="work-text"></pre>
 		</div>
-	</body>//  源代码来源：me.rehe.tech
+	</body>
 </html>
